--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -36,9 +36,6 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme myst_parser
-      - name: Sphinx build
-        run: |
-          sphinx-build doc _build
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -48,12 +45,12 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Sphinx build
         run: |
-          sphinx-build doc _build
+          sphinx-build -b html . _build/html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}        
         with:
-          path: ./_build/
+          path: ./_build/html
 
   # Deployment job
   deploy:
