--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme myst_parser
+          pip install sphinx sphinx_rtd_theme myst_parser sphinx-rtd-dark-mode
       - name: Checkout
         uses: actions/checkout@v4
         with:
