--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -48,7 +48,7 @@ jobs:
           sphinx-build -b html . _build/html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         with:
           path: ./_build/html
 
@@ -63,4 +63,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
