--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx-wagtail-theme myst-parser
+          pip install sphinx sphinx-wagtail-theme myst-parser sphinx-design
       - name: Checkout
         uses: actions/checkout@v4
         with:
